--- a/_config.yml
+++ b/_config.yml
@@ -6,7 +6,7 @@ kramdown:
 rouge: true
 permalink: /:title
 
-title: 忍把浮名，换了代码几行
-url: http://www.fangr.tk
+title: happyze biog
+url: http://www.happyze.tk
 feed: /atom.xml
-author_info: <a href="http://www.fangr.tk/">Fong Ray</a>
+author_info: <a href="http://happyze.github.io">happyze</a>
