--- a/_config.yml
+++ b/_config.yml
@@ -6,7 +6,7 @@ kramdown:
 rouge: true
 permalink: /:title
 
-title: happyze biog
-url: http://www.happyze.tk
+title: happyze blog
+url: http://happyze.github.io
 feed: /atom.xml
 author_info: <a href="http://happyze.github.io">happyze</a>
